fixed contentpane overflow issue

--- a/ui/src/components/common/DualPane.scss
+++ b/ui/src/components/common/DualPane.scss
@@ -22,7 +22,7 @@ $dual-pane-mobile-padding: $aleph-mobile-content-padding;
   flex-direction: column;
   flex-grow: 1;
   padding: 0 0 0 $dual-pane-padding;
-  overflow: visible;
+  overflow: hidden;
 
   .info-tabs-padding {
     padding: 0;
